<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:textColor="@color/design_default_color_surface"
        android:textSize="30sp"
        android:padding="10dp"
        android:text="@string/app_name"/>

    <RelativeLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:padding="10dp"
            android:id="@+id/article_heading"
            android:background="@color/primary"
            android:textColor="@color/design_default_color_surface"
            android:text="@string/title"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/article_heading">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:contentDescription="@string/img_description"
                    android:src="@drawable/gambar_android"/>

                <TextView
                    android:textSize="16sp"
                    android:text="@string/subtitle"
                    android:paddingVertical="10dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/article"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>